# crewai_conversational_chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
src/crewai_conversational_chatbot/: crew.py  main.py
src/crewai_conversational_chatbot/config/: agents.yaml  tasks.yaml
